# compass

./: .buildpacks  .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: .env.example  .pre-commit-config.yaml  Procfile  backend.bat  backend.ps1  backend.sh  constants.py  paths.py  psycopg2-2.9.9-cp311-cp311-macosx_11_0_arm64.whl  pyproject.toml  pytest.ini  requirements.txt  requirements2.txt  requirementss.txt  ruff.sh  timing.py
backend/certificates/: Eng_Bio.yaml
backend/compass/: apps.py  compass.sql  documents.py  insert_yaml.py  models.json  models.py  pg_to_sqlite.py  schema.py  serializers.py  signals.py  views.py
backend/compass/migrations/: 0001_initial.py  0002_alter_customuser_university_id.py  0002_alter_requirement_double_counting_allowed.py  0002_section_class_type.py  0003_alter_academicterm_term_code_and_more.py  0003_alter_requirement_dist_req.py  0003_remove_customuser_net_id_and_more.py  0004_customuser_net_id_customuser_university_id_and_more.py  0004_section_class_section_section_status.py  0005_remove_certificate_req_list_remove_degree_req_list_and_more.py  0005_requirement_dept_list.py  0006_remove_course_pu_flag_and_more.py  0007_customuser_manually_settled.py  0008_remove_customuser_manually_settled_and_more.py  0009_rename_settled_usercourses_requirement.py
backend/config/: asgi.py  django_init.py  schema.py  settings.py  urls.py  wsgi.py
backend/data/: check_reqs.py  configs.py  courses_courses.py  courses_resseats.py  courses_seats.py  del.py  delete_minor.py  dept-upload.py  f2019.csv  f2023_courses.csv  f2023_courses_resseats.csv  fetch_courses.py  fetch_data.py  fetch_data2.py  fetch_evals.py  fetch_profiler.py  fetched_data.txt  footage.py  generate_token.py  insert_data.py  insert_evals.py  insert_yamls.py  mqe-simple.yaml  mqe.yaml  profile_stats  push_courses.py  push_yamls.py  query_courses.py  req_lib.py  res.yaml  sas.yaml  scraper.py  scraper.txt  sla.yaml  sml.yaml  thr-mtd.yaml  tra.yaml  upload.py  vis.yaml  vpl.yaml  (+2 more)
backend/degrees/: AB.yaml
backend/majors/: CBE.yaml  CEE.yaml  COS-AB.yaml  COS-BSE.yaml  ECE.yaml  MAE.yaml  ORF.yaml  SPO.yaml
backend/minors/: AFS.yaml  ASA.yaml  CHI.yaml  CLA.yaml  COS.yaml  CS.yaml  CWR.yaml  DAN.yaml  EAS.yaml  ECS.yaml  ENG.yaml  ENT.yaml  ENV.yaml  FIN.yaml  GEO.yaml  GHP.yaml  GSS.yaml  HIS.yaml  HSTM.yaml  HUM.yaml  HUM_template.yaml  JPN.yaml  JRN.yaml  KOR.yaml  LAO.yaml  LIN.yaml  MED.yaml  MPP.yaml  MQE.yaml  MSE.yaml  MUS.yaml  NEU.yaml  PAS.yaml  PHI.yaml  SAS.yaml  SLA.yaml  SML.yaml  TMT.yaml  TRA.yaml  VIS.yaml  (+1 more)
backend/package/: apps.py
backend/prereqs/: benchmark.csv  benchmark.py  course-matcher.py  course-scraper.py  department-scraper.py  generator.py  large-prereq-classification-dataset.csv  prereq-classifier.py  prereq_classifier.joblib  prereq_vectorizer.joblib  test.py
backend/utils/: cas_client.py  custom_cas_backend.py  solver.py  student.py
frontend/: .env.example  .env.local.example  .eslintrc  .eslintrc.json  .pre-commit-config.yaml  .prettierrc  README.md  bun.lockb  bunfig.toml  package.json  (+9 more)
(+152 files in other folders)
